made class for first iimage and added text

--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
 	<h1>Benefits of Using Oils</h1>	
 </div>
 	
-
-
 <div class="row">
-	<div class="col">
+	<div class="col1">
 		<img src="images/coconut.jpg" alt="coconut oil in jar with spoon">
 		<h2>Coconut Oil</h2>
 			<li>Naturally antibacterial and antifunal</li>
 			<li> Excellent Moisturizer</li>
 			<li> Smells great</li>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 	<div class="col">
 		<img src="images/olive-oil.jpg" alt="olive oil in bowl with olives">
@@ -41,6 +45,12 @@
 			<li>Contains potent antioxidants</li>
 			<li>Helps restore skin smoothness</li>
 			<li>Protects against ultraviolet light</li>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 
 	<div class="col">
@@ -49,6 +59,12 @@
 			<li>Has anti-inflammatory properties</li>
 			<li>Repairs damaged skin</li>
 			<li>Reduces redness, drying and chapping</li>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 
 
